...
      flatListRef.current.scrollToOffset({ offset: 0, animated: true });
    }
  }, [walletID]);

  return (
    <View style={[styles.flex, stylesHook.backgroundContainer]}>
      <View style={[styles.refreshIndicatorBackground, stylesHook.gradientBackground]} testID="TransactionsListView" />
      <FlatList<Transaction>
        ref={flatListRef}
        getItemLayout={getItemLayout}
        updateCellsBatchingPeriod={50}
        onEndReachedThreshold={0.3}
        onEndReached={loadMoreTransactions}
...
        }
      />

      <FContainer ref={walletActionButtonsRef}>
        {wallet.allowReceive() && (
          <FButton
            testID="ReceiveButton"
            text={loc.receive.header}
            onPress={() => {
              if (wallet.type === BitAssetsWallet.type) {
                navigate('BitAssetsWallet', { walletID });
              } else if (wallet.type === LiquidWallet.type) {
                navigate('LiquidWallet', { walletID });
...
