...
const BitAssetsSendDetailsComponent = withLazySuspense(BitAssetsSendDetails);
const LiquidSendDetailsComponent = withLazySuspense(LiquidSendDetails);

const SendDetailsStack = () => {
  const theme = useTheme();
  const DetailsButton = useMemo(
    () => <HeaderRightButton testID="TransactionDetailsButton" disabled={true} title={loc.send.create_details} />,
    [],
  );

  return (
    <Stack.Navigator initialRouteName="SendDetails" screenOptions={{ headerShadowVisible: false, fullScreenGestureEnabled: false }}>
      <Stack.Screen
...
