...
    [onPressMenuItem, toolTipActions],
  );

  useEffect(() => {
    if (wallet) {
      setOptions({
        title: isSidechainWallet ? 'Receive' : loc.receive.header,
      });
    }
  }, [isSidechainWallet, setOptions, wallet]);

  useEffect(() => {
    if (wallet?.allowBIP47()) {
...
